# pairsona

./: TODO.md
channelserver/: Cargo.toml  README.md
channelserver/src/: main.rs  meta.rs  perror.rs  server.rs  session.rs  settings.rs
client/alice/: index.html  sw.js
