[package]
name = "channelserver"
version = "0.3.0"
authors = ["jr conlin<me+src@jrconlin.com"]

[dependencies]
config = "0.9.0"
failure = "0.1.1"
rand = "*"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
uap-rust = "0.0.4"

slog = {version="2.2.3", features=["release_max_level_debug"]}
slog-async = "2.3.0"
slog-json = "2.2.0"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
serde_derive = "1.0.69"

actix = "0.7"
actix-web = "0.7.3"

maxminddb = "0.10.0"